# deep-learning-dsp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  callbacks.py  data.py  dataset.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  inference_example.sh  metrics.py  models.py  notes.md  pyproject.toml  research.ipynb  stft.ipynb  train.py  train_example.sh  utils.py
config/baseline/: data.cfg  model.cfg
config/example/: data.cfg  model.cfg
config/lstm64/: data.cfg
config/lstm96/: model.cfg
data/: download.sh
model/: data.py  inference.py  models.py  train.py  utils.py
nn/: convert_to_json.py  data.py  datasets.py  inference.py  models.py  schedulers.py  train.py  utils.py
