[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["Nikita Rydanov <wrongwayboyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow-macos = {version = "^2.12.0", platform = "darwin"}
seaborn = "^0.12.2"
numpy = "^1.23"
pandas = "^1.5.3"
librosa = "^0.10.0"
wavfile = "^4.6.0"
pre-commit = "^3.2.1"
tensorflow-metal = {version = "^0.8", platform = "darwin"}
tensorflow = {version = "^2.12.0", platform = "linux"}
tensorflow-probability = "^0.19.0"
gitpython = "^3.1.31"
torch = "^2.0.0"
torchaudio = "^2.0.1"
torchvision = "^0.15.1"
click = "^8.1.3"
torchsummary = "^1.5.1"
tqdm = "^4.65.0"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
