[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["Nikita Rydanov <wrongwayboyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23"
librosa = "^0.10.0"
torch = {version = "^2.0.0", source = "pytorch"}
torchaudio = {version = "^2.0.1", source = "pytorch"}
torchvision = {version = "^0.15.1", source = "pytorch"}
tqdm = "^4.65.0"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
pandas = "^2.0.1"
auraloss = "^0.4.0"
tensorboard = "^2.13.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

